# finance-service

./: .gitignore  README.md  pyproject.toml
scripts/: finance_client.sh  run_finance_service.sh
sql/: 001_init.sql  002_roles_and_functions.sql
src/finance_service/: app.py  client.py  config.py  models.py  repository.py  service.py
tests/: test_client.py  test_service.py
